# sentinal_ai

./: .env.example  .gitignore  ARCHITECTURE.md  DEPENDENCY_MAP.md  Dockerfile  README.md  SPEC_FASTAPI_ORCHESTRATION.md  docker-compose.yml  merge_pages.py  pyproject.toml  requirements.txt
backend/: __init__.py
deployment/: deploy_ec2.sh
docs/: API_CONTRACTS.md  DEVELOPMENT_PLAN.md
docs/design/: deployment_architecture.md
docs/process/: hackathon_criteria.md
docs/specs/: SPEC_AI_ANALYSIS.md  SPEC_DOMAIN_RECON.md  SPEC_FRONTEND_DASHBOARD.md  SPEC_REMEDIATION_AGENT.md  SPEC_VULNERABILITY_SCANNER.md
docs/team/: TEAM_RESPONSIBILITIES.md  team_structure.md
frontend/: index.html  package.json
frontend/src/: App.jsx
orchestrator/: .env.example  config.py  main.py  requirements.txt
orchestrator/models/: schemas.py
orchestrator/routes/: analyze.py  remediate.py  report.py  scan.py
orchestrator/services/: ai_service.py  scanner_service.py
reports/: report-task-1234.html  report-task-5678.html
sample_target/: README.md
scripts/: dev_setup.sh  run_remediation.py  run_scanner.py  verify_system.py
sentinal_ai/: .env.example  .repomixignore  DEPENDENCY_MAP.md  Dockerfile  docker-compose.yml  merge_remediate.py  pyproject.toml  refactor.py  repomix-output.xml  requirements.txt
sentinal_ai/deployment/: README.md
sentinal_ai/docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md
sentinal_ai/frontend/: index.html  package-lock.json  package.json  vite.config.js  (+1 more)
sentinel-ai-dashboard/: package-lock.json
sentinel_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+193 files in other folders)
