[project]
name = "sentinel_ai"
version = "0.1.0"
description = "Sentinel AI autonomous security audit prototype"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",
    "paramiko>=3.5.0",
    "sslyze>=6.11.0",
    "pytest>=8.4.0"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
